--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,16 @@
 img{
 	width:340px;
 	height:190px;
+	object-fit:cover;
 }
 
 .text{
 	display:inline;
+	position:absolute;
 
 }
 
 .text>h2{
-
+   display:flex;
+   text-align:center;
 }
